--- a/Quiz/Quiz/MainWindow.xaml
+++ b/Quiz/Quiz/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Quiz"
         mc:Ignorable="d"
-        Title="MainWindow" Height="273" Width="618">
+        Title="MainWindow" Height="273" Width="618"
+        Background="LightBlue">
     <Grid Margin="0,0,10,-6">
         <TextBlock HorizontalAlignment="Left" Margin="70,26,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="17" Width="443" Name="QuestionTextBlock"/>
         <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="70,66,0,0" VerticalAlignment="Top" Name="RadioOptionA"/>
